Fixed bug where videos were going off screen in mobile view of projects overview page. Fixed by applying the appropriate CSS rule to both images and videos instead of just images.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1112,7 +1112,7 @@ body {
         padding-bottom: 25px;
     }
 
-    .project-card-image-link > img {
+    .project-card-image-link > img, .project-card-image-link > video {
         width: 100%;
     }
 
